# kanban

./: .env.example  .gitignore  .vercelignore  index.html  package-lock.json  package.json  supabase-schema.sql  vite.config.js
.github/workflows/: release.yml
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/keys/: tauri.key.pub
src-tauri/src/: main.rs
src/components/: AnalyticsModal.jsx  AuthContext.jsx  AvatarModal.jsx  AvatarRenderer.jsx  Badge.jsx  BoxModal.jsx  BrainDumpPanel.jsx  DragContext.jsx  DungeonTimer.jsx  EmojiPicker.jsx  FilterBar.jsx  GamificationBar.jsx  GamificationContext.jsx  GamificationModal.jsx  IconButton.jsx  LabelManagerModal.jsx  LevelUpCelebration.jsx  LoginScreen.jsx  Modal.jsx  NotificationCenter.jsx  PeopleManagerModal.jsx  QuickAddTask.jsx  RavenIcon.jsx  SettingsModal.jsx  ShopModal.jsx  StickyNote.jsx  StoryCard.jsx  StoryModal.jsx  TaskConfetti.jsx  TaskContextMenu.jsx  TaskDetailModal.jsx  ThemeContext.jsx  ToastContext.jsx  UpdateChecker.jsx  Whiteboard.jsx  XPNotification.jsx
src/utils/: constants.js  gamification.js  helpers.js  manaSeedConfig.js  ravenIconMap.js  shopData.js  spriteLoader.js  storage.js  useCloudSync.js
